--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
-plugins {
-    id 'com.android.application'
-    id 'com.google.gms.google-services'
-}
+//plugins {
+//    id 'com.android.application'
+//    id 'com.google.gms.google-services'
+//}
+
+apply plugin: 'com.android.application'
 
 android {
     namespace 'com.example.biosec'
@@ -46,3 +48,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
