--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,3 @@
-//plugins {
-//    id 'com.android.application'
-//    id 'com.google.gms.google-services'
-//}
-
 apply plugin: 'com.android.application'
 
 android {
@@ -47,6 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    //dependency for Biometric Authentication
+    implementation "androidx.biometric:biometric:1.1.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
