--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <!-- permission to use camera for QR code scanner -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.hardware.CAMERA" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
